# smart-calculator.2.0

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
calculator/: __init__.py  ast_nodes.py  constants.py  core.py  evaluator.py  exceptions.py  functions.py  parser.py  tokenizer.py
tests/: test_calculator.py
